# game.libretro.sameboy

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/android/hexdump/: 0001-build-wip.patch  0001-temp-PATH-debugging.patch  CMakeLists.txt  hexdump.sha256  hexdump.txt
depends/common/sameboy/: 0001-temp-Print-PATH-var-on-Android.patch  0001-temp-Print-PATH-var.patch  CMakeLists.txt  sameboy.txt
game.libretro.sameboy/: addon.xml.in
game.libretro.sameboy/resources/: settings.xml
game.libretro.sameboy/resources/language/English/: strings.po
game.libretro.sameboy/resources/language/resource.language.af_za/: strings.po
game.libretro.sameboy/resources/language/resource.language.am_et/: strings.po
game.libretro.sameboy/resources/language/resource.language.ar_dz/: strings.po
game.libretro.sameboy/resources/language/resource.language.ar_sa/: strings.po
game.libretro.sameboy/resources/language/resource.language.ast_es/: strings.po
game.libretro.sameboy/resources/language/resource.language.az_az/: strings.po
game.libretro.sameboy/resources/language/resource.language.be_by/: strings.po
game.libretro.sameboy/resources/language/resource.language.bg_bg/: strings.po
game.libretro.sameboy/resources/language/resource.language.bs_ba/: strings.po
game.libretro.sameboy/resources/language/resource.language.ca_es/: strings.po
game.libretro.sameboy/resources/language/resource.language.cs_cz/: strings.po
(+80 files in other folders)
